--- a/app/src/main/res/layout/show_fragment.xml
+++ b/app/src/main/res/layout/show_fragment.xml
@@ -11,9 +11,38 @@
     android:paddingRight="20dp"
     android:paddingTop="20dp"
     tools:context=".ui.show.ShowFragment">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"> <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textInputEditTextRestaurantSearch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="@string/menu_search"
+            android:inputType="text"
+            android:maxLines="1"
+            android:layout_weight="1"
+            android:textColor="@color/colorText">
+
+        </com.google.android.material.textfield.TextInputEditText>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/appCompatButtonSearch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/colorTextHint"
+            android:text="Search"/>
+    </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical" />
+    </LinearLayout>
 </androidx.core.widget.NestedScrollView>
