--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -23,15 +23,14 @@
         tools:layout="@layout/show_fragment" />
 
     <fragment
-        android:id="@+id/nav_search"
-        android:name="com.example.personalrestaurantguide.ui.search.SearchFragment"
-        android:label="@string/menu_search"
-        tools:layout="@layout/search_fragment" />
-
-    <fragment
         android:id="@+id/nav_detail"
         android:name="com.example.personalrestaurantguide.ui.detail.DetailFragment"
-        android:label="@string/menu_manage"
+        android:label="@string/menu_detail"
         tools:layout="@layout/detail_fragment" />
+    <fragment
+        android:id="@+id/nav_about"
+        android:name="com.example.personalrestaurantguide.ui.about.AboutFragment"
+        android:label="@string/menu_about"
+        tools:layout="@layout/about_fragment" />
 
 </navigation>
